--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>chatbots</title>
+    <title>Chatbots - Technological watch 2017-2018</title>
+    <link rel="icon" type="image/png" href="./static/favicon.png" />
   </head>
   <body>
     <div id="app"></div>
